--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ DATABASE_NAME=anaxago
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@database/anaxago?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=smtp://mailhog:1025
+###< symfony/swiftmailer-bundle ###
