--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -2,12 +2,11 @@
 fos_rest:
     param_fetcher_listener:  true
     allowed_methods_listener:  true
-    routing_loader:  false
     view:
         view_response_listener:  true
     format_listener:
+        enabled: true
         rules:
-            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+            - { path: ^/, prefer_extension: true, fallback_format: 'html', priorities: [ 'json', 'html' ] }
     body_converter:
         enabled: true
-        validate: true
