--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,7 +6,6 @@ anaxago_security:
     resource: "routes/security/routing.yml"
     prefix:   /
 
-projects:
-    type: rest
+project:
+    type: annotation
     resource: App\Controller\ProjectController
-    prefix: /api
