--- a/config/routes/default/routing.yml
+++ b/config/routes/default/routing.yml
@@ -1,3 +1,7 @@
 anaxago_starter_homepage:
     path:     /
     controller: App\Controller\DefaultController::index
+
+project:
+    type: annotation
+    resource: App\Controller\ProjectController
